Use a more recent version of jison.
Also add target in the makefile for closure compiler

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 *.pyc
 .*
-/src/lua_parser.js
-/lua2js
-/lua.as
-/lua.js
-/lua.min.js
-/lua+parser.as
-/lua+parser.js
-/lua+parser.min.js
-/luajs.zip
+src/lua_parser.js
+lua2js
+lua.as
+lua.js
+lua.min.js
+lua+parser.as
+lua+parser.js
+lua+parser.min.js
+luajs.zip
+latest-compiler.zip
+node_modules
+closurecompiler
