--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lua2js": "./lua2js"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha test.js"
+    "test": "make test && ./node_modules/mocha/bin/mocha test.js"
   },
   "repository": {
     "type": "git",
