Make jison a devDependency
As jison is only needed for building the *.js files, not for using
them, there is no need to install it as a dependency of the final
package.

--- a/package.json
+++ b/package.json
@@ -25,10 +25,8 @@
     "lua",
     "js"
   ],
-  "dependencies" : {
-    "jison"   :  "*"
-  },
   "devDependencies" : {
+    "jison"   :  "*",
     "mocha"   :  "*"
   },
   "license": "MIT",
